WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173728
REGRESSION (
r215809
): 50% regression 14E305 -> 15A293a in MotionMark Suits test
https://bugs.webkit.org/show_bug.cgi?id=173728
Summary
REGRESSION (r215809): 50% regression 14E305 -> 15A293a in MotionMark Suits test
Dean Jackson
Reported
2017-06-22 11:21:41 PDT
REGRESSION (
r215809
): 50% regression 14E305 -> 15A293a in MotionMark Suits test
Attachments
Patch
(4.22 KB, patch)
2017-06-22 11:25 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2017-06-22 11:22:05 PDT
<
rdar://problem/32526744
>
Dean Jackson
Comment 2
2017-06-22 11:25:16 PDT
Created
attachment 313643
[details]
Patch
Tim Horton
Comment 3
2017-06-22 11:27:36 PDT
Comment on
attachment 313643
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313643&action=review
> Source/WebCore/platform/graphics/cg/GradientCG.cpp:66 > + // FIXME: Rather than just check for extended colors, we could check the actual
Could? Should?
Dean Jackson
Comment 4
2017-06-22 14:06:51 PDT
Committed
r218717
: <
http://trac.webkit.org/changeset/218717
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug