REGRESSION (r215809): 50% regression 14E305 -> 15A293a in MotionMark Suits test https://bugs.webkit.org/show_bug.cgi?id=173728 <rdar://problem/32526744>

Reviewed by Tim Horton.

It turns out that CGGradientCreateWithColors is much slower than
CGGradientCreateWithColorComponents, even without colorspace variations.
Update the gradient creation code to only use this slower path
when it has extended colors.

* platform/graphics/Color.h: Add a FIXME about renaming some methods.
* platform/graphics/cg/GradientCG.cpp: Use CGGradientCreateWithColorComponents
if we have stops that are not extended colors.
(WebCore::Gradient::platformGradient):

Canonical link: https://commits.webkit.org/190600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218717 268f45cc-cd09-0410-ab3c-d52691b4dbfc