Source/WebCore/platform/graphics/cg/GradientCG.cpp
@@ -49,17 +49,45 @@ CGGradientRef Gradient::platformGradient()
     sortStopsIfNecessary();
 
     auto colorsArray = adoptCF(CFArrayCreateMutable(0, m_stops.size(), &kCFTypeArrayCallBacks));
+    unsigned numStops = m_stops.size();
 
     const int reservedStops = 3;
     Vector<CGFloat, reservedStops> locations;
-    locations.reserveInitialCapacity(m_stops.size());
+    locations.reserveInitialCapacity(numStops);
 
+    Vector<CGFloat, 4 * reservedStops> colorComponents;
+    colorComponents.reserveInitialCapacity(numStops * 4);
+
+    bool hasExtendedColors = false;
     for (const auto& stop : m_stops) {
+
+        // If all the stops are sRGB, it is faster to create a gradient using
+        // components than CGColors.
+        // FIXME: Rather than just check for extended colors, we should check the actual
+        // color space, and whether or not the components are outside [0-1].
+        // <rdar://problem/32926606>
+
+        if (stop.color.isExtended())
+            hasExtendedColors = true;
+
+        float r;
+        float g;
+        float b;
+        float a;
+        stop.color.getRGBA(r, g, b, a);
+        colorComponents.uncheckedAppend(r);
+        colorComponents.uncheckedAppend(g);
+        colorComponents.uncheckedAppend(b);
+        colorComponents.uncheckedAppend(a);
+
         CFArrayAppendValue(colorsArray.get(), cachedCGColor(stop.color));
         locations.uncheckedAppend(stop.offset);
     }
 
-    m_gradient = CGGradientCreateWithColors(extendedSRGBColorSpaceRef(), colorsArray.get(), locations.data());
+    if (hasExtendedColors)
+        m_gradient = CGGradientCreateWithColors(extendedSRGBColorSpaceRef(), colorsArray.get(), locations.data());
+    else
+        m_gradient = CGGradientCreateWithColorComponents(sRGBColorSpaceRef(), colorComponents.data(), locations.data(), numStops);
 
     return m_gradient;
 }
